--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         "Jonlee Construction exceeded our expectations in every way. Their attention to detail, professionalism, and commitment to quality made our dream home a reality. We couldn't be happier with the results."
                     </p>
                     <div class="border-t pt-4">
-                        <p class="font-semibold text-construction-gray">Sarah Johnson</p>
+                        <p class="font-semibold text-construction-gray">MR & MRS Dube</p>
                         <p class="text-gray-600">Homeowner</p>
                     </div>
                 </div>
@@ -350,7 +350,7 @@
                         "Working with Jonlee Construction on our office renovation was seamless. They delivered on time, within budget, and the quality of work was outstanding. Highly recommended for any commercial project."
                     </p>
                     <div class="border-t pt-4">
-                        <p class="font-semibold text-construction-gray">Michael Chen</p>
+                        <p class="font-semibold text-construction-gray">Michael Nhemachena</p>
                         <p class="text-gray-600">Business Owner</p>
                     </div>
                 </div>
