Update Jonlee Construction Website Images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.pexels.com/photos/1216589/pexels-photo-1216589.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./public/download (1).jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -189,7 +189,7 @@
                         </p>
                     </div>
                     <div class="fade-in">
-                        <img src="https://images.pexels.com/photos/3810756/pexels-photo-3810756.jpeg?auto=compress&cs=tinysrgb&w=600&h=400&fit=crop" alt="Construction team at work" class="rounded-lg shadow-lg w-full h-80 object-cover">
+                        <img src="https://images.pexels.com/photos/1216589/pexels-photo-1216589.jpeg?auto=compress&cs=tinysrgb&w=600&h=400&fit=crop" alt="Construction building site" class="rounded-lg shadow-lg w-full h-80 object-cover">
                     </div>
                 </div>
             </div>
